[gd_scene load_steps=5 format=3 uid="uid://d2pvwyvuthxbj"]

[ext_resource type="Script" uid="uid://c60yntqnc0ahw" path="res://scripts/power_consumer.gd" id="1_dejmm"]
[ext_resource type="Texture2D" uid="uid://u5lgy7gvemfw" path="res://assets/icon.svg" id="2_odi44"]
[ext_resource type="PackedScene" uid="uid://dlgr4gx1fp05v" path="res://scenes/power_consumer_component.tscn" id="3_kh44e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4jfq"]
size = Vector2(132, 136)

[node name="Consumer" type="Node2D"]
script = ExtResource("1_dejmm")

[node name="ConsumeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConsumeArea"]
shape = SubResource("RectangleShape2D_d4jfq")
debug_color = Color(2.83971e-06, 0.644661, 0.282626, 0.0784314)

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 0.309804)
position = Vector2(-1, 0)
texture = ExtResource("2_odi44")

[node name="DebugLabel" type="RichTextLabel" parent="."]
offset_left = -80.0
offset_top = 68.0
offset_right = 88.0
offset_bottom = 148.0
fit_content = true
vertical_alignment = 1

[node name="PowerConsumerComponent" parent="." instance=ExtResource("3_kh44e")]
tick_interval = 1.0

[connection signal="area_entered" from="ConsumeArea" to="." method="_on_consume_area_area_entered"]
[connection signal="area_exited" from="ConsumeArea" to="." method="_on_consume_area_area_exited"]
